--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<h1>Hi</h1>
+<html>
+    <head>
+        <meta charset="utf-8">
+
+        <title>No tiktok site</title>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-41043842-3"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-41043842-3');
+        </script>
+    </head>
+    <body>
+        <h1>This site is for people who don't like tiktok.</h1>
+    </body>
+</html>
