--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <h1>No TikTok!</h1>
             <h2>Why peope don't like TikTok?</h2>
             <ul>
+                <li><a href="https://www.vultr.com/?ref=9019895-8H" target="_blank">Get $100 Free Vultr Credit!</a></li>
                 <li>It’s full of <a target="_blank" href="https://www.quora.com/Why-do-people-make-cringe-worthy-videos-on-tik-tok-why-do-they-make-a-fool-out-of-themselves-just-to-get-famous">meaningless videos</a> and a big wasting of time!</li>
                 <li>It's cringy and teenagers as young as 14 are <a target="_blank" href="https://thepassage.cc/article/484">over sexualizing</a> themselves. </li>
                 <li><a target="_blank" href="https://www.quora.com/Why-do-a-lot-of-people-hate-Tiktok">It irritates people</a> to see people become famous because of lip singing instead of actually doing work.</li>
